--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 * {
     font-family: Charter, "Bitstream Charter", "Sitka Text", Cambria, serif;
     /* font-weight: normal; */
-  }
+}
+
+    ul {
+        padding:0;
+    }
   
   body {
     margin: 10px;
@@ -20,7 +24,7 @@
   .card {
     display: flex;
     gap: 32px;
-    width: 50%;
+    width:calc(50% - 32px);
     padding: 27px;
     padding-left: 32px;
     min-height: calc(50vh - 34.75px);
